--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.1.14",
     "three": "^0.168.0"
   },
   "devDependencies": {
