--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.17.7",
+    "lucide": "^0.447.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "swiper": "^11.1.14",
     "three": "^0.168.0"
